# checkout

./: .dockerignore  .mise.toml  .pre-commit-config.yaml  .rtx.toml  Dockerfile  README.md  constraints.txt  docker-compose-build.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yaml  publish.yaml  pull_request.yaml  test.yaml  update-dependencies.yaml
docker/: run.sh
envs/: local.env.dist
src/: conftest.py  manage.py
src/checkout/: asgi.py  settings.py  urls.py  wsgi.py
src/common/: admin.py  urls.py  views.py
src/common/locale/en/LC_MESSAGES/: django.po
src/common/locale/fr/LC_MESSAGES/: django.po
src/common/migrations/: 0001_initial.py
src/common/templates/: 403.html  404.html  500.html
src/common/templates/common/: base.html  favicon.html  navbar.html  ping.html
src/purchase/: admin.py  apps.py  forms.py  layout.py  models.py  signals.py  urls.py  views.py
src/purchase/fixtures/: payment_methods.json  payment_methods.yaml  products.json  products.yaml
src/purchase/locale/en/LC_MESSAGES/: django.po
src/purchase/locale/fr/LC_MESSAGES/: django.po
src/purchase/management/commands/: clear_all_data.py  generate_dummy_baskets.py  generate_dummy_data.py  refresh_cache.py
src/purchase/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_display_order.py  0004_remove_basket_status.py  0005_alter_basket_options_alter_basketitem_options_and_more.py  0006_basketitem_unit_price_cents.py  0007_alter_basketitem_unit_price_cents.py  0008_basketitem_unique_product_per_basket.py  0009_basketitemetag.py  0010_rename_basketitemetag_cacheetag.py  0011_rename_cacheetag_cache.py  0012_rename_value_cache_etag_cache_last_modified.py  0013_remove_basketitem_unique_product_per_basket_and_more.py  0014_alter_basket_payment_method.py  0015_remove_product_image_product_initials.py  0016_alter_paymentmethod_options.py  0017_productcategory.py  0018_product_category.py  0019_alter_productcategory_options.py
src/purchase/static/purchase/css/: basket_form.css  reports.css
src/purchase/static/purchase/js/: basket_form.js
src/purchase/templates/purchase/: basket_confirm_delete.html  basket_form.html  basket_item.html  basket_list.html  reports.html
src/purchase/templates/purchase/snippets/: basket_item.html  basket_unpriced_item.html  by_day.html  by_day_table.html  htmx_plot.html  plots.html  report_no_payment_method.html  report_payment_methods.html  report_products.html
src/purchase/templatetags/: purchase.py
src/purchase/tests/: factories.py  test_cashier_flow.py  test_models.py
src/purchase/views/: __init__.py  basket.py  reports.py  utils.py
